--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,12 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes | Lasagna</title>
 </head>
+
 <body>
     <h1>Lasagna</h1>
+
+    <figure>
+        <img src="../images/lasagna.jpg" alt="Image of a finished lasagna">
+        <figcaption>Lasagne are a type of pasta, possibly one of the oldest types, made of very wide, flat sheets.
+            Either term can also refer to an Italian dish made of stacked layers of lasagne alternating with fillings
+            such as ragù (ground meats and tomato sauce), vegetables, cheeses (which may include ricotta, mozzarella,
+            and parmesan), and seasonings and spices, like Italian seasoning, such as garlic, oregano and basil. The
+            dish may be topped with grated cheese, which becomes melted after baking. Typically, cooked pasta is
+            assembled with the other ingredients and then baked in an oven. The resulting casserole is cut into
+            single-serving square portions.</figcaption>
+    </figure>
+
+    <h2>Ingredients</h2>
+
+    <h3>Ragu</h3>
+    <ul>
+        <li>4 tbsp olive oil</li>
+        <li>4 celery sticks, finely chopped</li>
+        <li>2 carrots, finely chopped</li>
+        <li>1 medium onion, finely chopped</li>
+        <li>2 garlic cloves, peeled and crushed</li>
+        <li>1 sprig rosemary</li>
+        <li>700g beef mince</li>
+        <li>340g pork mince</li>
+        <li>1 bottle red wine (750ml)</li>
+        <li>2 x 400g cans tomatoes, roughly chopped</li>
+        <li>200ml beef stock</li>
+        <li>salt and freshly ground black pepper</li>
+    </ul>
+
+    <h3>Bechamel Sauce</h3>
+
+    <ul>
+        <li>1 litre whole milk</li>
+        <li>2 bay leaves</li>
+        <li>&frac14; onion</li>
+        <li>pinch freshly grated nutmeg</li>
+        <li>50g butter</li>
+        <li>50g plain flour</li>
+    </ul>
+
+    <h3>Lasagne</h3>
+
+    <ul>
+        <li>14 sheets fresh lasagne pasta</li>
+        <li>3 x 125g balls mozzarella, cut into small cubes</li>
+        <li>small handful grated parmesan</li>
+        <li>freshly ground black pepper</li>
+        <li>2 tbsp butter</li>
+    </ul>
+
+
+    <h2>Steps</h2>
+
+    <ol>
+        <li>Preheat the oven to 180&deg;C.</li>
+
+        <li>For the ragu, heat the olive oil in a frying pan over a low heat and fry the celery, carrots and onion for
+            approximately 15 minutes, until softened and golden. Add the garlic and rosemary and fry for two more
+            minutes.</li>
+
+        <li>Add the beef and pork mince and cook until the liquid from the meat has been absorbed.</li>
+
+        <li>Pour in approximately 400ml of red wine and stir well. Cook for approximately 45 minutes.</li>
+
+        <li>Once the wine has evaporated, add the tomatoes and stock. Leave the mixture uncovered to cook slowly for two
+            hours. Top up with more warm stock if necessary. Season with salt and freshly ground black pepper to taste.
+        </li>
+
+        <li>To make the bechamel sauce, place the milk in a large non-stick saucepan, add the bay leaves, onion and
+            nutmeg and gently bring to the boil.</li>
+
+        <li>In a separate saucepan melt the butter and add the flour. Beat well and cook for two minutes. Remove the
+            milk from the heat and add a little to the flour mixture. Combine well, and when all the milk has been
+            absorbed, add a little more. Continue to do this until all the milk has been added, whisking continually.
+        </li>
+
+        <li>For the lasagne, blanch the pasta in salted boiling water for three minutes. Spoon a third of the bechamel
+            sauce into the bottom of a lasagne dish in a layer, then place some of the pasta strips over the top. Follow
+            this with some of the mozzarella and parmesan, and sprinkle over freshly ground black pepper. Follow with a
+            layer of ragu. Repeat this step twice until all the ingredients have been used up. Dot knobs of butter over
+            the surface and cook in the oven for 30 minutes, or until golden-brown on top and completely cooked through.
+        </li>
+    </ol>
+
 </body>
+
 </html>
