--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,7 +10,8 @@
 
 <body>
     <h1>Lasagna</h1>
-
+    <a href="../index.html">Home</a>
+    
     <figure>
         <img src="../images/lasagna.jpg" alt="Image of a finished lasagna">
         <figcaption>Lasagne are a type of pasta, possibly one of the oldest types, made of very wide, flat sheets.
